--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Login with mongodb flask</title>
-    <link id="pagestyle" href="/static/css/soft-ui-dashboard.css?v=1.0.0" rel="stylesheet" />
+  <title>Login with mongodb flask</title>
+  <link id="pagestyle" href="/static/css/soft-ui-dashboard.css?v=1.0.0" rel="stylesheet" />
 </head>
 
 <body>
-    <style>
-        /* HIDE RADIO */
-        
-        [type=radio] {
-            position: absolute;
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-        /* IMAGE STYLES */
-        
-        [type=radio]+img {
-            cursor: pointer;
-        }
-        /* CHECKED STYLES */
-        
-        [type=radio]:checked+img {
-            outline: 2px solid #71F7AF;
-        }
-    </style>
+  <style>
+    /* HIDE RADIO */
+    
+    [type=radio] {
+        position: absolute;
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+    /* IMAGE STYLES */
+    
+    [type=radio]+img {
+        cursor: pointer;
+    }
+    /* CHECKED STYLES */
+    
+    [type=radio]:checked+img {
+        outline: 2px solid #71F7AF;
+    }
+</style>
 
-    <section>
-        <div class="page-header section-height-75">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
-                        <div class="card card-plain mt-8">
-                            <div class="card-header pb-0 text-left bg-transparent">
-                                <h4 class="text-info text-gradient">
-                                    Yog-Ai-t - Register
-                                </h4>
-                                <p class="mb-0">
-                                    {% if get_flashed_messages() %} {{ get_flashed_messages()[0] }} {% else %} Add your credentials {% endif %}
-                                </p>
-                            </div>
-                            <div class="card-body">
-                                <form role="form text-left" method="post" action="/signup">
+<section>
+    <div class="page-header section-height-75">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
+                    <div class="card card-plain mt-8">
+                        <div class="card-header pb-0 text-left bg-transparent">
+                            <h4 class="text-info text-gradient">
+                                YogAIt - Register
+                            </h4>
+                            <p class="mb-0">
+                              {% if get_flashed_messages() %} {{ get_flashed_messages()[0] }}  {% else %} Add your credentials {% endif %}
+                            </p>
+                        </div>
+                        <div class="card-body">
+                            <form role="form text-left" method="post" action="/signup">
 
 
-                                    <!-- <label>Choose Account Type</label>
+                                <!-- <label>Choose Account Type</label>
                                 <div class="mb-3">
                                     <label>
                                         <input type="radio" class="form-control" name="category" value="Doctor" checked>
@@ -59,76 +58,48 @@
                                     </label>
                                 </div> -->
 
-                                    <label>Username</label>
-                                    <div class="mb-3">
-                                        <input type="name" name="username" id="inputName" class="form-control" placeholder="Username" minlength="4" maxlength="20" required autofocus>
-                                    </div>
+                                <label>Username</label>
+                                <div class="mb-3">
+                                  <input type="name" name="username" id="inputName" class="form-control" placeholder="Username" required autofocus>
+                                </div>
 
-                                    <label>Email</label>
-                                    <div class="mb-3">
-                                        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                                    </div>
+                                <label>Email</label>
+                                <div class="mb-3">
+                                  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                                </div>
 
-                                    <label>Password</label>
-                                    <div class="mb-3">
-                                        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="gender"> Select you gender</label>
-                                        <select name="gender" class="form-control">
-                                        <option value="none" selected>Gender</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
-                                        <option value="other">other</option>
-                                      </select>
-                                    </div>
-
-                                    <label>Height</label>
-                                    <div class="mb-3">
-                                        <input type="number" name="height" id="inputHeight" class="form-control" placeholder="height (in cm)" required>
-                                    </div>
-
-                                    <label>Weight</label>
-                                    <div class="mb-3">
-                                        <input type="number" name="weight" id="inputWeight" class="form-control" placeholder="weight (in kg)" required>
-                                    </div>
-
-                                    <label>Birth date:</label>
-                                    <div class="mb-3">
-                                        <input type="date" id="birthdate" name="birthdate" id="inputbirthdate" class="form-control" required>
-                                    </div>
-
-
-
-
-                                    <div class="form-cweck form-switch">
-                                        <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
-                                        <label class="form-check-label" for="rememberMe">Terms</label>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" name="register" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign UP</button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                                <p class="mb-4 text-sm mx-auto">
-                                    Already have an account?
-                                    <a href="{{ url_for('signin') }}" class="text-info text-gradient font-weight-bold">Sign IN</a>
-                                </p>
-                            </div>
+                                <label>Password</label>
+                                <div class="mb-3">
+                                  <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                                </div>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
+                                    <label class="form-check-label" for="rememberMe">Terms</label>
+                                </div>
+                                <div class="text-center">
+                                    <button type="submit" name="register" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign UP</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                            <p class="mb-4 text-sm mx-auto">
+                                Already have an account?
+                                <a href="{{ url_for('signin') }}" class="text-info text-gradient font-weight-bold">Sign IN</a>
+                            </p>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
-                            <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url('/static/img/curved-images/curved14.jpg')"></div>
-                        </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
+                        <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url('/static/img/curved-images/curved14.jpg')"></div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- <div class="container">
+<!-- <div class="container">
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
@@ -168,5 +139,4 @@
 
 </div> -->
 </body>
-
 </html>
